fixed the align issues and added center to heading and paragraph

--- a/style/index.css
+++ b/style/index.css
@@ -11,6 +11,7 @@ body {
     font-size: 36px;
     line-height: 54px;
     color: #575757;
+    text-align: center;
 }
 
 .paragraph {
@@ -20,6 +21,7 @@ body {
     font-size: 15px;
     line-height: 22px;
     color: #8F8F8F;
+    text-align: center;
 }
 
 input {
@@ -52,7 +54,6 @@ label {
     height: 510px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    
 }
 
 .input-block {
@@ -70,7 +71,11 @@ label {
 }
 
 .signup-details {
-    
+    display: block;
+}
+
+.signup-details .input-block {
+    width: 159px;
 }
 
 .signup-details input {
@@ -88,7 +93,7 @@ label {
 }
 
 .signup-form {
-    width: 333px;
+    width: 360px;
     margin: auto;
 }
 
